feat(blog): add blog post to simanis app

--- a/package.json
+++ b/package.json
@@ -3,30 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:types": "npm run clear:next && payload generate:types",
+    "clear:next": "rm -rf .next",
+    "generate": "payload generate"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.17",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@payloadcms/db-postgres": "^3.0.0-beta.39",
+    "@payloadcms/next": "^3.0.0-beta.39",
+    "@payloadcms/plugin-cloud-storage": "^3.0.0-beta.39",
+    "@payloadcms/richtext-lexical": "^3.0.0-beta.39",
+    "@payloadcms/storage-s3": "^3.0.0-beta.39",
+    "@swc/core": "^1.5.24",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "ai": "^3.1.19",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
+    "escape-html": "^1.0.3",
     "framer-motion": "^11.2.6",
-    "next": "14.2.3",
+    "graphql": "^16.8.1",
+    "moment": "^2.30.1",
+    "next": "^14.3.0-canary.37",
+    "payload": "^3.0.0-beta.39",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "sharp": "^0.33.4",
     "sweetalert2": "^11.11.0",
     "sweetalert2-react-content": "^5.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/escape-html": "^1.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
