--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+      "@payload-config": ["./src/payload.config.ts"]
+    },
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
