feat(intl): add localization to main app and payload cms

--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "ai": "^3.1.19",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.2.1",
     "cross-env": "^7.0.3",
     "escape-html": "^1.0.3",
     "framer-motion": "^11.2.6",
     "graphql": "^16.8.1",
     "moment": "^2.30.1",
     "next": "^14.3.0-canary.37",
+    "next-intl": "^3.14.1",
     "payload": "^3.0.0-beta.39",
     "react": "^18",
     "react-dom": "^18",
