--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
   "include": [
     "next-env.d.ts",
     "environment.d.ts",
+    "global.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
