--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.17",
+    "@ducanh2912/next-pwa": "^10.2.7",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@payloadcms/db-postgres": "^3.0.0-beta.39",
