--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -31,15 +31,15 @@ jobs:
               run: |
                 cat <<EOT >> .env
                 NEXT_PUBLIC_BACKEND_URL="http://localhost:5050"
-                GROQ_API_KEY="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"
+                GROQ_API_KEY="${{secrets.GROQ_API_KEY}}"
                 
-                DATABASE_URL="postgresql://postgres:simanis123!@simanis-dev.cl4eug6aqfs3.ap-southeast-1.rds.amazonaws.com:5432/simanis"
+                DATABASE_URL="${{secrets.DATABASE_URL}}"
                 
-                PAYLOAD_SECRET="i1}h?5{[*Pzu}5Mp9dw78tP!0r8Sm/Xkk!*6Pibqu4v5pF:PjN%V%7+D-VZ,=-a."
+                PAYLOAD_SECRET="${{ secrets.PAYLOAD_SECRET}}"
                 PAYLOAD_PUBLIC_SERVER_URL="http://localhost:3000"
                 
-                REVALIDATION_KEY="226c747798b8754fd4dbbd53f5f6fd648cbef9bdc52bafc30fc51e427c2e20dc7afcea33c1b7f4dc1fa78f58d2344f15fc03a29f08b6330990468976e915ac87"
-                NEXT_PRIVATE_REVALIDATION_KEY="226c747798b8754fd4dbbd53f5f6fd648cbef9bdc52bafc30fc51e427c2e20dc7afcea33c1b7f4dc1fa78f58d2344f15fc03a29f08b6330990468976e915ac87"
+                REVALIDATION_KEY="${{ secrets.REVALIDATION_KEY}}"
+                NEXT_PRIVATE_REVALIDATION_KEY="${{ secrets.NEXT_PRIVATE_REVALIDATION_KEY}}"
                 
                 S3_ACCESS_KEY_ID="AKIA5OETRXDHZUXE3F4J"
                 S3_SECRET_ACCESS_KEY="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"
@@ -53,7 +53,7 @@ jobs:
             - name: Build, tag, and push docker image to amazon ecr
               env: 
                 REGISTRY: ${{steps.login-ecr.outputs.registry}}
-                REPOSITORY: simanis
+                REPOSITORY: simanis-core-web-next
                 IMAGE_TAG: latest
               run: |
                 docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
@@ -64,5 +64,4 @@ jobs:
 
             - name: Deploy to EKS
               run: |
-                kubectl apply -f deployment.yaml
-                kubectl apply -f service.yaml
+                kubectl apply -f k8s-simanis.yaml
