--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -64,4 +64,5 @@ jobs:
 
             - name: Deploy to EKS
               run: |
+                kubectl delete -f k8s-simanis.yaml
                 kubectl apply -f k8s-simanis.yaml
