--- a/k8s-simanis.yaml
+++ b/k8s-simanis.yaml
@@ -50,7 +50,7 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
     service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:646758500755:certificate/6076c1da-6917-4e75-853b-c7f80900022a"
-    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443,5050"
+    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
 spec:
   type: LoadBalancer
   selector:
@@ -61,6 +61,6 @@ spec:
       port: 443
       targetPort: 3000
     - protocol: TCP
-      name: submit-https
+      name: submit-http
       port: 5050
       targetPort: 5050
