--- a/.github/workflows/github-actions-ci.yaml
+++ b/.github/workflows/github-actions-ci.yaml
@@ -31,7 +31,7 @@ jobs:
               run: |
                 cat <<EOT >> .env
                 DATABASE_REGION="ap-southeast-1"
-                NEXT_PUBLIC_BACKEND_URL="https://si-manis.my.id:5050"
+                NEXT_PUBLIC_BACKEND_URL="http://si-manis.my.id:5050"
                 GROQ_API_KEY="${{secrets.GROQ_API_KEY}}"
                 
                 # DATABASE_URL="${{secrets.DATABASE_URL}}"
