--- a/k8s-simanis.yaml
+++ b/k8s-simanis.yaml
@@ -24,23 +24,23 @@ spec:
 
 ---
 # default
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: simanis-core-web-next
-# spec:
-#   type: LoadBalancer
-#   selector:
-#     env: simanis
-#   ports:
-#     - protocol: TCP
-#       name: landing
-#       port: 80
-#       targetPort: 3000
-#     - protocol: TCP
-#       name: submit
-#       port: 5050
-#       targetPort: 5050
+apiVersion: v1
+kind: Service
+metadata:
+  name: simanis-core-web-next
+spec:
+  type: LoadBalancer
+  selector:
+    env: simanis
+  ports:
+    - protocol: TCP
+      name: landing
+      port: 80
+      targetPort: 3000
+    - protocol: TCP
+      name: submit
+      port: 5050
+      targetPort: 5050
 
 # ssl
 # apiVersion: v1
@@ -66,32 +66,34 @@ spec:
 #       targetPort: 5050
 
 # ingress nginx
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: simanis-core-web-next
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-    nginx.ingress.kubernetes.io/ssl-cert: "arn:aws:acm:us-east-1:646758500755:certificate/6076c1da-6917-4e75-853b-c7f80900022a"
-spec:
-  rules:
-  - host: si-manis.my.id
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: simanis-core-web-next
-            port:
-              number: 443
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: simanis-core-web-next
-            port:
-              number: 5050
-
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: simanis-core-web-next
+#   annotations:
+#     alb.ingress.kubernetes.io/scheme: internet-facing
+#     alb.ingress.kubernetes.io/target-type: ip
+#     alb.ingress.kubernetes.io/backend-protocol: HTTP
+#     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:646758500755:certificate/6076c1da-6917-4e75-853b-c7f80900022a
+#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
+#     alb.ingress.kubernetes.io/ssl-redirect: "443"
+# spec:
+#   ingressClassName: alb
+#   rules:
+#   - host: si-manis.my.id
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: simanis-core-web-next
+#             port:
+#               number: 443
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: simanis-core-web-next
+#             port:
+#               number: 5050
